--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.6",
+    "axios": "^0.21.1",
     "composition-api": "0.0.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
